--- a/templates/security/account_confirm.html.twig
+++ b/templates/security/account_confirm.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block content %}
     <h5>Поздравляем!</h5>
-    <p>Ваш аккаунт подтвержден, теперь вы можете <a href="{{ path('app_login') }}">войти</a></p>
+    <p>Ваш аккаунт подтвержден, теперь вы можете <a href="{{ path('home') }}">войти</a></p>
 {% endblock %}
