--- a/templates/tour/tour.html.twig
+++ b/templates/tour/tour.html.twig
@@ -90,7 +90,7 @@
 
                     <div class="tour-equipment__total">
                         Итого:
-                        <span class="bold">1990 ₽</span>
+                        <span class="bold"></span>
                     </div>
                     {% if app.user %}
                         <button class="btn js-tour-save-button" data-token="{{ csrf_token('tour_booking') }}" style="display: none">Сохранить</button>
